--- a/templates/layout/region--breadcrumb.html.twig
+++ b/templates/layout/region--breadcrumb.html.twig
@@ -13,7 +13,7 @@
  */
 #}
 {% if content %}
-  <div{{ attributes.addClass('breadcrumb__wrapper') }}>
+  <div{{ attributes.addClass('breadcrumb__container') }}>
     {{ content }}
   </div>
 {% endif %}
