--- a/templates/layout/region--tools.html.twig
+++ b/templates/layout/region--tools.html.twig
@@ -13,7 +13,7 @@
  */
 #}
 {% if content %}
-  <div{{ attributes.addClass('before-content') }}>
+  <div{{ attributes.addClass('tools__container') }}>
     {{ content }}
   </div>
 {% endif %}
