--- a/src/scss/components/navigation/_local-tasks.scss
+++ b/src/scss/components/navigation/_local-tasks.scss
@@ -13,7 +13,7 @@
   flex: 1 1;
   height: $spacing-quadruple - $spacing-half;
   list-style: none;
-  margin: 0;
+  margin: 0 0 0 (-$spacing-quarter);
   padding: 0;
 }
 
