--- a/src/scss/layout/_layout-content.scss
+++ b/src/scss/layout/_layout-content.scss
@@ -2,7 +2,8 @@
   margin: 0 $spacing-double;
 
   // Negate layout content margins on articles since we want node content to be able to strech from edge to edge.
-  > article {
+  > article,
+  > .page-title {
     margin: 0 (-$spacing-double);
   }
 }
