--- a/templates/block/block--page-title-block.html.twig
+++ b/templates/block/block--page-title-block.html.twig
@@ -4,15 +4,24 @@
  * Theme override to display a Page title block.
  */
 #}
+
+{%
+  set classes = [
+    'page-title',
+  ]
+%}
+
 {% if hide_block != true %}
-  <div{{ attributes }}>
-    {{ title_prefix }}
-    {% if label %}
-      <h2{{ title_attributes }}>{{ label }}</h2>
-    {% endif %}
-    {{ title_suffix }}
-    {% block content %}
-      {{ content }}
-    {% endblock %}
+  <div{{ attributes.addClass(classes) }}>
+    {% embed "@hdbt/misc/container.twig" with {container_element: 'page-title'} %}
+      {% block container_content %}
+        {{ title_prefix }}
+        {% if label %}
+          <h2{{ title_attributes }}>{{ label }}</h2>
+        {% endif %}
+        {{ title_suffix }}
+        {{ content }}
+      {% endblock %}
+    {% endembed %}
   </div>
 {% endif %}
