--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -15,8 +15,14 @@ h1 {
   font-weight: $font-weight-regular;
   line-height: $lineheight-s;
 
+  @include breakpoint($breakpoint-m) {
+    // Margin on top needed to create enough space on top when there is no hero.
+    margin-top: $spacing-quadruple;
+  }
+
   @include breakpoint($breakpoint-l) {
     font-size: 4.5rem;
+    margin-bottom: $spacing-quadruple;
   }
 }
 
