--- a/src/scss/layout/_tools.scss
+++ b/src/scss/layout/_tools.scss
@@ -1,8 +1,12 @@
 .tools__container {
-  margin-top: $spacing;
+  @include breakpoint($breakpoint-m) {
+    margin-top: $spacing;
+  }
 }
 
 .breadcrumb__container + .tools__container {
-  margin-bottom: ($spacing + $spacing-quarter);
-  margin-top: (-$spacing-half);
+  @include breakpoint($breakpoint-m) {
+    margin-bottom: ($spacing + $spacing-quarter);
+    margin-top: (-$spacing-half);
+  }
 }
