--- a/src/scss/components/navigation/_navigation-links.scss
+++ b/src/scss/components/navigation/_navigation-links.scss
@@ -2,9 +2,9 @@
 .region--header-top {
   .hds-button {
     @include font-size(14px);
-    @include font-weight($font-weight-regular);
     border: 0;
     border-right: 1px solid $color-white;
+    font-weight: $font-weight-regular;
     padding: 0 $spacing;
 
     &:last-of-type {
