--- a/templates/paragraphs/paragraph--list-of-links-item.html.twig
+++ b/templates/paragraphs/paragraph--list-of-links-item.html.twig
@@ -57,11 +57,20 @@
 
     <a href="{{ link }}" class="list-of-links__item__link">
       {% if list_of_links_design == 'with-image' %}
-        {% if image %}
-          <div class="list-of-links__item__image">{{ image }}</div>
+        {% if image.0 %}
+          <div class="list-of-links__item__image">
+            {{ image }}
+          </div>
+        {% else %}
+          <div class="list-of-links__item__image">
+            {% include '@hdbt/media/image--card.html.twig' with {content: '' } %}
+          </div>
         {% endif %}
       {% endif %}
       <h3 class="list-of-links__item__title">{{ text }}</h3>
+      <span class="list-of-links__item__arrow">
+        {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right', label: 'Test label for the icon'|t } %}
+      </span>
       {% if list_of_links_design == 'without-image' %}
         {% if desc %}
           <div class="list-of-links__item__desc">{{ desc }}</div>
