UHF-251 Finalized styling the list of links element

--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -1,5 +1,10 @@
 .text {
+  margin-bottom: $spacing-double;
   position: relative;
+
+  @include breakpoint($breakpoint-l) {
+    margin-bottom: $spacing-quadruple;
+  }
 
   .text__container {
     // OPTION 1:
