--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -1,25 +1,63 @@
+$item_spacing: $spacing-double;
+
+.list-of-links {
+  margin-bottom: $spacing-double;
+
+  @include breakpoint($breakpoint-l) {
+    margin-bottom: $spacing-quadruple;
+  }
+}
+
 .list-of-links__content {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-left: -$spacing;
   overflow: hidden;
-  width: calc(100% + #{$spacing});
+  width: 100%;
+
+  @include breakpoint($breakpoint-s) {
+    flex-direction: row;
+    margin-left: -$item_spacing;
+    width: calc(100% + #{$item_spacing});
+  }
+}
+
+.list-of-links__container {
+  @include breakpoint(max-width $breakpoint-s) {
+    max-width: 100%;
+  }
 }
 
 .list-of-links__item {
   box-sizing: border-box;
-  padding-left: $spacing;
-  width: 25%;
+  margin-bottom: $spacing-double;
+  width: 100%;
+
+  @include breakpoint($breakpoint-s) {
+    padding-left: $item_spacing;
+    width: 50%;
+  }
+
+  @include breakpoint($breakpoint-m) {
+    width: 25%;
+  }
 
   // If there is 1,2 or 3 items inside the list of links:
   @include content_count(1, 2, 3) {
-    width: 33.3333%;
+    @include breakpoint($breakpoint-s) {
+      width: 50%;
+    }
+
+    @include breakpoint($breakpoint-m) {
+      width: 33.3333%;
+    }
   }
 
   .list-of-links__item__link {
     display: block;
     overflow: hidden;
+    text-decoration: none;
     width: 100%;
   }
 
@@ -40,8 +78,7 @@
   .list-of-links__item__title {
     @include font-size(24px);
     font-weight: 500;
-    margin: 0 0 $spacing;
-    text-decoration: none;
+    margin: 0 0 $spacing-half;
   }
 
   .list-of-links__item__arrow {
@@ -55,5 +92,105 @@
 }
 
 .list-of-links__title {
+  @include font-size(36px);
+  margin-bottom: $spacing-double;
   width: 100%;
+
+  @include breakpoint($breakpoint-l) {
+    @include font-size(48px);
+  }
+}
+
+// Without image variants
+.list-of-links--without-image,
+.list-of-links--without-image-desc {
+  .list-of-links__item {
+    padding-right: 100px;
+    position: relative;
+
+    @include breakpoint($breakpoint-s) {
+      padding-right: 80px;
+      width: 50%;
+    }
+
+    @include breakpoint($breakpoint-m) {
+      padding-right: 100px;
+    }
+
+    @include breakpoint($breakpoint-l) {
+      padding-right: 160px;
+    }
+
+    // If there is 1,2 or 3 items inside the list of links:
+    @include content_count(1, 2, 3) {
+      @include breakpoint($breakpoint-m) {
+        width: 50%;
+      }
+    }
+
+    .list-of-links__item__arrow {
+      line-height: 0;
+      margin: -#{$spacing-half} 0 0;
+      position: absolute;
+      right: 30px;
+      top: 0;
+
+      @include breakpoint($breakpoint-s) {
+        right: 20px;
+      }
+
+      @include breakpoint($breakpoint-m) {
+        right: 30px;
+      }
+
+      @include breakpoint($breakpoint-l) {
+        right: 60px;
+      }
+
+      @include breakpoint($breakpoint-xl) {
+        right: 110px;
+      }
+    }
+
+    .list-of-links__item__title {
+      @include font-size(24px);
+      text-decoration: underline;
+
+      @include breakpoint($breakpoint-l) {
+        @include font-size(28px);
+      }
+    }
+
+    .list-of-links__item__link:hover {
+      .list-of-links__item__title {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .list-of-links__title {
+    margin-bottom: $spacing-double;
+
+    @include breakpoint($breakpoint-l) {
+      margin-bottom: $spacing-quadruple;
+    }
+  }
+}
+
+// Without image but with description variant
+.list-of-links--without-image {
+  .list-of-links__item {
+    @include breakpoint($breakpoint-xl) {
+      padding-right: 250px;
+    }
+
+    .list-of-links__item__desc {
+      @include font-size(16px);
+      color: $color-black-60;
+
+      @include breakpoint($breakpoint-l) {
+        @include font-size(20px);
+      }
+    }
+  }
 }
