--- a/templates/field/field--field-keywords.html.twig
+++ b/templates/field/field--field-keywords.html.twig
@@ -49,7 +49,9 @@
   {% endfor %}
 {% else %}
   <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
-  {% for item in items %}
-    {{ item.content }}
-  {% endfor %}
+  <div class="keywords">
+    {% for item in items %}
+      {{ item.content }}
+    {% endfor %}
+  </div>
 {% endif %}
