--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -1,61 +1,71 @@
 .text {
-  position: relative;
-
   .text__container {
-    // OPTION 1:
-    @include breakpoint(max-width $breakpoint-s) {
-      max-width: 100%;
-    }
+    max-width: $content-width-max;
+  }
+}
 
-    // OPTION 2:
-    //max-width: var(--container-width-xl);
+// Apply styles for Basic page only.
+.page-type--page {
 
-    @include breakpoint($breakpoint-s) {
-    //  max-width: var(--container-width-s);
-    }
+  .text {
+    position: relative;
 
-    @include breakpoint($breakpoint-m) {
-    //  max-width: var(--container-width-xl);
-    }
-
-    .text__text-content {
-      @include breakpoint($breakpoint-m) {
-        padding-left: 50%;
+    .text__container {
+      // OPTION 1:
+      @include breakpoint(max-width $breakpoint-s) {
+        max-width: 100%;
       }
 
-      > *:first-child {
-        margin-top: 0;
-      }
-
-      > *:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    h2, h3, h4, h5, h6 {
-
-      @include breakpoint($breakpoint-m) {
-        box-sizing: border-box;
-        height: 0;
-        margin: 0 0 0 -100%;
-        padding-right: $spacing;
-        width: 100%;
-      }
-
-      @include breakpoint($breakpoint-l) {
-        padding-right: $spacing-double;
-      }
-    }
-
-    p, ul, ol {
-      margin-left: $spacing-double;
+      // OPTION 2:
+      //max-width: var(--container-width-xl);
 
       @include breakpoint($breakpoint-s) {
-        margin-left: $spacing-quadruple;
+        //  max-width: var(--container-width-s);
       }
 
       @include breakpoint($breakpoint-m) {
-        margin-left: $spacing;
+        //  max-width: var(--container-width-xl);
+      }
+
+      .text__text-content {
+        @include breakpoint($breakpoint-m) {
+          padding-left: 50%;
+        }
+
+        > *:first-child {
+          margin-top: 0;
+        }
+
+        > *:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+      h2, h3, h4, h5, h6 {
+
+        @include breakpoint($breakpoint-m) {
+          box-sizing: border-box;
+          height: 0;
+          margin: 0 0 0 -100%;
+          padding-right: $spacing;
+          width: 100%;
+        }
+
+        @include breakpoint($breakpoint-l) {
+          padding-right: $spacing-double;
+        }
+      }
+
+      p, ul, ol {
+        margin-left: $spacing-double;
+
+        @include breakpoint($breakpoint-s) {
+          margin-left: $spacing-quadruple;
+        }
+
+        @include breakpoint($breakpoint-m) {
+          margin-left: $spacing;
+        }
       }
     }
   }
