--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -6,6 +6,7 @@
 .container {
   margin-left: auto;
   margin-right: auto;
+  max-width: $content-area-wrapper-width-max;
   padding: 0 $spacing $spacing;
   transition: padding 100ms linear;
 
