--- a/templates/misc/container.twig
+++ b/templates/misc/container.twig
@@ -1,4 +1,4 @@
-<div class="container hds-container {{ container_element|replace({'_':'-'}) }}__container">
+<div class="container {{ container_element|replace({'_':'-'}) }}__container">
   {% block container_content %}
     {{ content }}
   {% endblock %}
