--- a/src/scss/components/paragraphs/_link.scss
+++ b/src/scss/components/paragraphs/_link.scss
@@ -1,15 +1,19 @@
-// Links inside the paragraph content area
-.paragraph-content .link {
-  // Add extra margin around the link paragraph.
-  margin: $spacing 0;
+// Apply styles for Basic page only.
+.page-type--page {
 
-  .link__content {
-    @include breakpoint($breakpoint-s) {
-      padding-left: $spacing-quadruple;
-    }
+  // Links inside the paragraph content area
+  .paragraph-content .link {
+    // Add extra margin around the link paragraph.
+    margin: $spacing 0;
 
-    @include breakpoint($breakpoint-m) {
-      padding-left: calc(50% + #{$spacing});
+    .link__content {
+      @include breakpoint($breakpoint-s) {
+        padding-left: $spacing-quadruple;
+      }
+
+      @include breakpoint($breakpoint-m) {
+        padding-left: calc(50% + #{$spacing});
+      }
     }
   }
 }
