Fixed styles based on layouts.

--- a/src/scss/components/block/_page-title.scss
+++ b/src/scss/components/block/_page-title.scss
@@ -4,7 +4,7 @@
   .page-type--article & {
     h1 {
       margin-bottom: $spacing;
-      max-width: $content-header-area-width-max;
+      max-width: $content-width-max;
     }
   }
 }
