Added email icon for social media sharing and styled the social media share block.

--- a/src/scss/components/content/_article.scss
+++ b/src/scss/components/content/_article.scss
@@ -35,6 +35,7 @@
     @include font-size(16px, 24px);
     color: $color-black-40;
     font-weight: $font-weight-regular;
+    margin-bottom: $spacing;
   }
 
   .article-content__container {
