--- a/src/scss/components/block/_social-media.scss
+++ b/src/scss/components/block/_social-media.scss
@@ -1,7 +1,7 @@
 .social-media-sharing {
   display: flex;
   line-height: 0;
-  margin: 0 -6px $spacing;  // By design the margin is 12px.
+  margin: 0 -6px $spacing-and-half; // By design the margin is 12px.
 
   .share {
     color: $color-black;
@@ -10,7 +10,7 @@
     text-decoration: none;
 
     .icon {
-      --icon-proportions: calc(#{$spacing} * 1.5);
+      --icon-proportions: #{$spacing-and-half};
     }
 
     &:focus,
