Added temporary styles for the quote and highlight components.

--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -10,3 +10,5 @@
 @import "library/mixins/*.*";
 @import "library/fonts/*.*";
 @import "base/**/*.*";
+@import "components/content/highlighted";
+@import "components/content/quoted";
