UHF-205 Style highlighted and quote elements

--- a/src/scss/components/content/_highlighted.scss
+++ b/src/scss/components/content/_highlighted.scss
@@ -1,7 +1,24 @@
 .highlighted {
-  @include font-size(20px);
-  color: var(--color-metro);
+  @include font-size(24px);
   display: block;
-  font-weight: $font-weight-bold;
+  font-weight: $font-weight-regular;
+  line-height: $lineheight-m;
   margin: $spacing-double 0;
+  padding: $spacing-half 0 $spacing-half $spacing-and-half;
+  position: relative;
+
+  @include breakpoint($breakpoint-l) {
+    @include font-size(36px);
+    padding: 0 0 0 $spacing-double + $spacing-half;
+  }
+
+  &::before {
+    background-color: var(--hdbt-theme-color);
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 8px;
+  }
 }
