--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -66,7 +66,7 @@
         }
       }
 
-      p, ul, ol {
+      p, ul, ol, .quote {
         margin-left: $spacing-double;
 
         @include breakpoint($breakpoint-s) {
@@ -76,6 +76,10 @@
         @include breakpoint($breakpoint-m) {
           margin-left: $spacing;
         }
+      }
+
+      .quote p, .highlighted p {
+        margin-left: 0;
       }
     }
   }
