UHF-205 Add more spacing around hightlighted and quote elements

--- a/src/scss/components/content/_highlighted.scss
+++ b/src/scss/components/content/_highlighted.scss
@@ -3,12 +3,13 @@
   display: block;
   font-weight: $font-weight-regular;
   line-height: $lineheight-m;
-  margin: $spacing-double 0;
+  margin: $spacing-triple 0;
   padding: $spacing-half 0 $spacing-half $spacing-and-half;
   position: relative;
 
   @include breakpoint($breakpoint-l) {
     @include font-size(36px);
+    margin: $spacing-quadruple 0;
     padding: 0 0 0 $spacing-double + $spacing-half;
   }
 
