UHF-205 remove display flex from ckeditor body

--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -12,3 +12,7 @@
 @import "base/**/*.*";
 @import "components/content/highlighted";
 @import "components/content/quoted";
+
+body.cke_editable {
+  display: block;
+}
