--- a/src/scss/components/navigation/_local-tasks.scss
+++ b/src/scss/components/navigation/_local-tasks.scss
@@ -4,6 +4,10 @@
 
   @include breakpoint($breakpoint-m) {
     display: block;
+    margin: 0 $spacing;
+  }
+
+  @include breakpoint($breakpoint-l) {
     margin: 0 $spacing-double $spacing;
   }
 }
