--- a/src/scss/components/content/_article.scss
+++ b/src/scss/components/content/_article.scss
@@ -44,10 +44,15 @@
 
   .article__keywords {
     background: $color-silver-light;
-    padding: $spacing-and-half 0;
+    margin-top: $spacing-double;
+    padding: 0 0 $spacing-and-half;
 
     @include breakpoint($breakpoint-m) {
-      padding: $spacing-quadruple 0;
+      padding: $spacing-and-half 0 $spacing-quadruple;
+    }
+
+    @include breakpoint($breakpoint-l) {
+      margin-top: $spacing-triple;
     }
 
     .container {
