--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -1,9 +1,9 @@
 .text {
   @include font-size(18px, 27px);
-  margin-bottom: $spacing-double;
+  margin-top: $spacing-double;
 
   @include breakpoint($breakpoint-l) {
-    margin-bottom: $spacing-quadruple;
+    margin-top: $spacing-quadruple;
   }
 
   .text__container {
@@ -11,6 +11,18 @@
   }
   .text__text-content {
     max-width: $content-width-max;
+
+    > *:first-child {
+      margin-top: 0;
+    }
+
+    > *:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  + .text {
+    margin-top: $spacing;
   }
 }
 
