--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   flex-shrink: 0;
-  margin: 0 auto;
+  margin: $spacing-double auto 0;
   max-width: 1920px;
   width: 100%;
 
@@ -16,7 +16,7 @@
 }
 
 .footer-top {
-  padding-top: $spacing * 3;
+  padding-top: $spacing;
 
   @include breakpoint($breakpoint-m) {
     display: flex;
@@ -40,8 +40,16 @@
     font-weight: 500;
     line-height: $lineheight-m;
 
-    @include breakpoint($breakpoint-m) {
-      margin-bottom: $spacing-double;
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
+  p {
+    margin-top: $spacing;
+
+    .hds-button {
+      margin-top: $spacing-half;
     }
   }
 
@@ -60,13 +68,21 @@
   }
 }
 
+.footer-bottom__container {
+  padding-top: $spacing-and-half;
+}
+
 .footer-bottom {
-  padding-bottom: $spacing;
+  padding-bottom: $spacing-double;
   padding-top: $spacing;
 
   @include breakpoint($breakpoint-m) {
     align-items: center;
     display: flex;
+  }
+
+  @include breakpoint($breakpoint-l) {
+    padding-bottom: $spacing;
   }
 
   .menu {
