--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -26,6 +26,10 @@ $koro-height: 50px;
     margin-top: $spacing-triple;
   }
 
+  .hero__cta {
+    margin-top: $spacing-double;
+  }
+
   .hero__description {
     p {
       line-height: $lineheight-xxl;
@@ -550,6 +554,7 @@ $koro-height: 50px;
 
   .hero__container {
     @include breakpoint($breakpoint-m) {
+      box-sizing: border-box;
       margin: 0;
       max-width: $container-width-xl / 2;
       width: 50%;
@@ -767,13 +772,13 @@ $koro-height: 50px;
 
   .hero__image-container {
     height: 300px;
-    overflow: hidden;
     position: relative;
 
     @include breakpoint($breakpoint-l) {
       bottom: 0;
       height: 100%;
       left: 0;
+      overflow: hidden;
       position: absolute;
       right: 0;
       top: 0;
@@ -783,11 +788,13 @@ $koro-height: 50px;
     .hds-koros {
       display: block;
       position: absolute;
+      top: -1px; // To avoid occasional 1px line on top of the koro when being scaled.
       z-index: 1;
 
       @include breakpoint($breakpoint-l) {
         bottom: 50%;
         left: 5%;
+        top: auto;
         transform: rotate(135deg);
         transform-origin: center;
         width: 100%;
