--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -1,4 +1,4 @@
-$item_spacing: $spacing-double;
+$item_spacing: $spacing-triple;
 
 .list-of-links {
   margin-top: $spacing-double;
@@ -55,19 +55,37 @@ $item_spacing: $spacing-double;
   }
 
   .list-of-links__item__link {
+    align-items: flex-start;
     box-sizing: border-box;
-    display: block;
+    display: flex;
+    flex-direction: column;
     height: 100%;
+    justify-content: center;
+    min-height: 90px;
     overflow: hidden;
-    padding-bottom: $spacing-quadruple;
     position: relative;
     text-decoration: none;
     width: 100%;
+
+    @include breakpoint($breakpoint-s) {
+      display: block;
+      padding-bottom: $spacing-triple;
+    }
   }
 
   .list-of-links__item__image {
+    left: 0;
     line-height: 0;
-    margin-bottom: $spacing;
+    position: absolute;
+    top: 0;
+    // Size of thumbnails on mobile
+    width: 90px;
+
+    @include breakpoint($breakpoint-s) {
+      margin-bottom: $spacing;
+      position: static;
+      width: 100%;
+    }
 
     img {
       height: auto;
@@ -80,20 +98,37 @@ $item_spacing: $spacing-double;
   }
 
   .list-of-links__item__title {
-    @include font-size(24px);
+    @include font-size(20px);
     font-weight: 500;
-    margin: 0;
+    margin: 0 0 0 (100px + $spacing);
+
+    @include breakpoint($breakpoint-s) {
+      @include font-size(24px);
+      margin: 0;
+    }
   }
 
   .list-of-links__item__arrow {
-    bottom: 0;
-    left: 0;
+    display: block;
+    line-height: 0;
     // Offset icon to left since there is white spacing on the icon
-    margin-left: -#{$spacing-half};
-    position: absolute;
+    margin-left: (100px + $spacing - $spacing-quarter);
+    margin-top: $spacing-half;
+
+    @include breakpoint($breakpoint-s) {
+      bottom: 0;
+      left: 0;
+      margin-left: -$spacing-half;
+      margin-top: 0;
+      position: absolute;
+    }
 
     .icon {
-      --icon-proportions: 3rem;
+      --icon-proportions: 1.5rem;
+
+      @include breakpoint($breakpoint-s) {
+        --icon-proportions: 3rem;
+      }
     }
   }
 }
@@ -140,6 +175,8 @@ $item_spacing: $spacing-double;
     }
 
     .list-of-links__item__link {
+      // Min-height is the same as the icon height.
+      min-height: 2rem;
       padding-bottom: 0;
       position: static;
     }
@@ -148,12 +185,13 @@ $item_spacing: $spacing-double;
       bottom: auto;
       left: auto;
       line-height: 0;
-      margin: -#{$spacing-half} 0 0;
+      margin: 0;
       position: absolute;
       right: 30px;
       top: 0;
 
       @include breakpoint($breakpoint-s) {
+        margin-top: -$spacing-half;
         right: 20px;
       }
 
@@ -168,10 +206,19 @@ $item_spacing: $spacing-double;
       @include breakpoint($breakpoint-xl) {
         right: 110px;
       }
+
+      .icon {
+        --icon-proportions: 2rem;
+
+        @include breakpoint($breakpoint-s) {
+          --icon-proportions: 3rem;
+        }
+      }
     }
 
     .list-of-links__item__title {
       @include font-size(24px);
+      margin-left: 0;
       text-decoration: underline;
 
       @include breakpoint($breakpoint-l) {
@@ -211,7 +258,7 @@ $item_spacing: $spacing-double;
     .list-of-links__item__desc {
       @include font-size(16px);
       color: $color-black-60;
-      margin-top: $spacing;
+      margin-top: $spacing-half;
 
       @include breakpoint($breakpoint-l) {
         @include font-size(20px);
