--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -82,10 +82,5 @@ p {
 
 ul, ol {
   margin: $spacing-double 0 0;
-  padding: 0;
-
-  li {
-    margin-left: $spacing-double;
-    padding-left: $spacing;
-  }
+  padding: $spacing-and-half 0 0;
 }
