--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -24,6 +24,23 @@
   + .text {
     margin-top: $spacing;
   }
+
+  ul, ol {
+    padding: 0;
+
+    li {
+      margin-left: $spacing-double;
+      padding-left: $spacing;
+    }
+
+    ul, ol {
+      margin-top: $spacing;
+
+      li {
+        margin-left: $spacing;
+      }
+    }
+  }
 }
 
 // Apply styles for Basic page only.
