UHF-651 Change basic page styling to follow article style, change gutters on mobile to 24px and adjust article keywords paddings

--- a/src/scss/components/content/_article.scss
+++ b/src/scss/components/content/_article.scss
@@ -86,7 +86,7 @@
         color: $color-white;
         font-weight: $font-weight-regular;
         margin: $spacing-quarter;
-        padding: $spacing-half $spacing-quadruple;
+        padding: $spacing-half $spacing-double;
         text-decoration: none;
       }
     }
