--- a/src/scss/components/navigation/_local-tasks.scss
+++ b/src/scss/components/navigation/_local-tasks.scss
@@ -4,7 +4,7 @@
 
   @include breakpoint($breakpoint-m) {
     display: block;
-    margin: 0 $spacing;
+    margin: 0 $spacing-and-half;
   }
 
   @include breakpoint($breakpoint-l) {
