--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -7,7 +7,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: $content-area-wrapper-width-max;
-  padding: $spacing $spacing 0;
+  padding: $spacing $spacing-and-half 0;
   transition: padding 100ms linear;
 
   @include breakpoint($breakpoint-l) {
