UHF-651 Fix article layout ingress and heading element placement, change box-sizing border-box as default setting for the content elements

--- a/src/scss/components/block/_page-title.scss
+++ b/src/scss/components/block/_page-title.scss
@@ -1,10 +1,10 @@
 .page-title__container {
-  max-width: $content-area-width-max;
+  h1 {
+    margin-bottom: $spacing;
+    max-width: $content-width-max;
 
-  .page-type--article & {
-    h1 {
-      margin-bottom: $spacing;
-      max-width: $content-width-max;
+    @include breakpoint($breakpoint-m) {
+      padding-left: $spacing-triple * 2;
     }
   }
 }
