--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -3,6 +3,15 @@ body {
   height: 100%;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+// Border box is applied to all elements but individual elements can change this setting if required.
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   background-color: $body-bg-color;
   display: flex;
