UHF-191 remove unused width constraint from article and link paragraph

--- a/src/scss/components/paragraphs/_link.scss
+++ b/src/scss/components/paragraphs/_link.scss
@@ -1,6 +1,6 @@
 .link {
   .link__content {
-    max-width: $content-area-width-max;
+    max-width: $content-width-max;
 
     @include breakpoint($breakpoint-m) {
       padding-left: $spacing-triple * 2;
