--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -6,8 +6,12 @@ h5,
 h6 {
   hyphens: auto;
   line-height: $lineheight-m;
-  margin: $spacing 0 0;
+  margin: $spacing-double 0 0;
   word-break: break-word;
+
+  @include breakpoint($breakpoint-m) {
+    margin: $spacing-quadruple 0 0;
+  }
 }
 
 h1 {
@@ -77,10 +81,10 @@ a {
 }
 
 p {
-  margin: $spacing-double 0 0;
+  margin: $spacing-and-half 0 0;
 }
 
 ul, ol {
-  margin: $spacing-double 0 0;
+  margin: $spacing-and-half 0 0;
   padding: $spacing-and-half 0 0;
 }
