--- a/src/scss/components/content/_article.scss
+++ b/src/scss/components/content/_article.scss
@@ -44,10 +44,11 @@
   .article__keywords {
     background: $color-silver-light;
     margin-top: $spacing-double;
-    padding: 0 0 $spacing-and-half;
+    padding: $spacing-half 0 $spacing-double;
 
     @include breakpoint($breakpoint-m) {
-      padding: $spacing-and-half 0 $spacing-quadruple;
+      margin-top: $spacing-quadruple;
+      padding: ($spacing-quadruple - $spacing-and-half) 0 $spacing-quadruple;
     }
 
     @include breakpoint($breakpoint-l) {
@@ -67,10 +68,11 @@
       @include font-size(18px, 30px);
       color: $color-black-90;
       font-weight: $font-weight-medium;
-      margin: $spacing $spacing-quarter;
+      margin: 0 $spacing-quarter $spacing-half;
 
       @include breakpoint($breakpoint-m) {
         @include font-size(24px, 30px);
+        margin: 0 $spacing-quarter $spacing;
       }
     }
 
