--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -7,10 +7,10 @@
   margin-left: auto;
   margin-right: auto;
   max-width: $content-area-wrapper-width-max;
-  padding: $spacing $spacing-and-half 0;
+  padding: $spacing-and-half $spacing-and-half 0;
   transition: padding 100ms linear;
 
   @include breakpoint($breakpoint-l) {
-    padding: $spacing $spacing-double 0;
+    padding: $spacing-and-half $spacing-double 0;
   }
 }
