--- a/templates/paragraphs/paragraph--image.html.twig
+++ b/templates/paragraphs/paragraph--image.html.twig
@@ -55,7 +55,7 @@
   <div{{ attributes.addClass(classes) }}>
     {% embed "@hdbt/misc/container.twig" with {container_element: 'image'} %}
       {% block container_content %}
-
+        <div class="image__image-content">
         {# Check if there is image set and print it with correct aspect ratio #}
         {% if content.field_image|render %}
           {% for key, image in content.field_image %}
@@ -75,7 +75,7 @@
           {% endfor %}
         {% endif %}
         {% spaceless %}
-          <figcaption>
+          <figcaption class="image__caption">
             {{ content.field_image_caption }}
 
             {# The image caption is attached to each image so we need to get it from the media entity #}
@@ -92,6 +92,7 @@
             {% endif %}
           </figcaption>
         {% endspaceless %}
+        </div>
       {% endblock %}
     {% endembed %}
   </div>
