--- a/src/scss/components/paragraphs/_columns.scss
+++ b/src/scss/components/paragraphs/_columns.scss
@@ -1,7 +1,7 @@
 .columns {
   margin: $spacing-double auto 0;
   max-width: 100%;
-  padding: 0 $spacing-double;
+  padding: 0 $spacing-and-half;
 
   @include breakpoint($breakpoint-m) {
     margin-top: $spacing-triple;
